--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </script>
 
     <script type='module' src='./lib/iobio-charts/index.js'></script>
-    <script type= 'module' src="./home-page.js"></script>
+    <script type= 'module' src="./home_page.js"></script>
     <script type= 'module' src="./file_requirement.js"></script>
     <script type= 'module' src="./license_page.js"></script>
     <script type= 'module' src="./compatibility_page.js"></script>
