Added waygate to serve the local files

--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
     <script type=importmap>
       {
         "imports": {
-          "d3": "https://cdn.jsdelivr.net/npm/d3@7/+esm"
+          "d3": "https://cdn.jsdelivr.net/npm/d3@7/+esm",
+          "waygate": "https://cdn.jsdelivr.net/npm/waygate-js@0.4.0/index.js"
         }
       }
     </script>
