Fixed the id in mapped chart

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </div>
             </iobio-label-info-button>
 
-            <iobio-percent-box percent-key="mapped_reads" total-key="total_reads"></iobio-percent-box>
+            <iobio-percent-box id="mapped-reads-chart" percent-key="mapped_reads" total-key="total_reads"></iobio-percent-box>
           </iobio-panel>
           
           <iobio-panel>
