Unset the custom color

--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
           chart.style.setProperty('--iobio-data-color', 'rgb(9,176,135)');
           chart.style.setProperty('--iobio-data-color-secondary', 'rgba(9,176,135,0.5)');
         } else {
-          chart.style.setProperty('--iobio-data-color', '#2d8fc1');
-          chart.style.setProperty('--iobio-data-color-secondary', 'rgba(45,143,193,0.2)');
+          chart.style.setProperty('--iobio-data-color', 'unset');
+          chart.style.setProperty('--iobio-data-color-secondary', 'unset');
         }
       });
     </script>
