--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         align-items: center;
       }
 
-      iobio-percent-box.percent-box {
+      iobio-percent-box.info-dialog-percent-box {
         margin-right: 30px;
         flex-shrink: 0;    
         width: 150px;
@@ -149,15 +149,15 @@
               <div slot="content">
                 <p>The mapped reads chart shows how many of the reads in the sample were successfully mapped to the reference genome. Genetic variation, in particular structural variants, ensure that every sequenced sample is genetically different to the reference genome it was aligned to. If the sample differs only in a small number of single base pair changes (e.g. SNVs), the read will still likely map to the reference, but, for more significant variation, the read can fail to be placed. Therefore, it is not expected that the mapped reads rate will hit 100%, but it is expected to be high (usually >90%).</p>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[88866,267]"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[88866,267]"></iobio-percent-box>
                   <p>This is an example of a human, whole exome. In this case, 99.7% of the sampled reads map to the reference, corresponding to 88,666 actual reads. It is important to note that when the wheel is blue, only reads that have been assigned to a reference sequence are included. This means that the 0.3% of reads that are unmapped have a mate pair that successfully maps to the reference genome.</p>
                 </div>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[1108009142,8864073]" style="--data-color: rgb(9,176,135); --data-color-secondary: rgba(9,176,135,0.5);"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[1108009142,8864073]" style="--data-color: rgb(9,176,135); --data-color-secondary: rgba(9,176,135,0.5);"></iobio-percent-box>
                   <p>For the case that both mates from paired end sequencing are unmapped, they appear at the end of the BAM file. Usually, the number of such unmapped reads can be obtained from the index file. When this is possible, the wheel will appear in green, as shown for this whole genome sample.</p>
                 </div>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[479405211,141424537]" style="--data-color:  rgb(9,176,135); --data-color-secondary: rgba(9,176,135,0.5);"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[479405211,141424537]" style="--data-color:  rgb(9,176,135); --data-color-secondary: rgba(9,176,135,0.5);"></iobio-percent-box>
                   <p>If the rate of mapped reads is low (usually below 90%), questions need to be asked about the sample to understand why so many reads are unmapped. The last example only has 77.2% of reads mapping to the reference genome for a whole genome sample. This was caused as the sample was contaminated with a significant amount of bacterial DNA; the DNA sample was obtained from a saliva sample, rather than a blood draw.</p>
                 </div>
               </div>
@@ -212,15 +212,15 @@
               <div slot="content">
                 <p>PCR duplicates are two (or more) reads that originate from the same DNA fragment. When sequencing data is analysed, it is assumed that each observation (i.e. each read) is independent; an assumption that fails in the presence of duplicate reads. Typically, algorithms look for reads that map to the same genomic coordinate, and whose mates also map to identical genomic coordinates. It is important to note that as the sequencing depth increases, more reads are sampled from the DNA library, and consequently it is increasingly likely that duplicate reads will be sampled. As a result, the true duplicate rate is not independent of the depth, and they should both be considered when looking at the duplicate rate. Additionally, as the sequencing depth in increases, it is also increasingly likely that reads will map to the same location and be marked as duplicates, even when they are not. As such, as the sequencing depth approaches and surpasses the read length, the duplicate rate starts to become less indicative of problems.</p>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[2483,73425]"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[2483,73425]"></iobio-percent-box>
                   <p>This is an example of the duplicate rate for a ~80X human whole genome. The expectation is that the duplicate rate is low (well below 10%), and consequently, this sample would be considered good.</p>
                 </div>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[401,100651]"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[401,100651]"></iobio-percent-box>
                   <p>If the median coverage drops to ~50X, the duplicate rate should be even lower.</p>
                 </div>
                 <div class="inline-container">
-                  <iobio-percent-box class="percent-box" data="[54960,401167]"></iobio-percent-box>
+                  <iobio-percent-box class="info-dialog-percent-box" data="[54960,401167]"></iobio-percent-box>
                   <p>This is a different sample with ~50X coverage, but now the duplicate rate is much higher. This sample could well have problems at the library prep stage and should potentially be resequenced.</p>
                 </div>
               </div>
