--- a/index.html
+++ b/index.html
@@ -382,10 +382,13 @@
         }
 
         const [ alignmentUrlRes, indexUrlRes, bedUrlRes ] = await Promise.all(promises);
-
+       
         alignmentUrl = alignmentUrlRes.url
         indexUrl = indexUrlRes.url;
-        bedUrl = bedUrlRes.url;
+        if (bedUrlRes) {
+          bedUrl = bedUrlRes.url;
+        }
+        
       }
       else {
         alignmentUrl = urlParams.get("alignment-url");
