Updated the axis format for histogram

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               </div>
             </iobio-label-info-button>
 
-            <iobio-histogram broker-key="coverage_hist"></iobio-histogram>
+            <iobio-histogram broker-key="coverage_hist" id="read-coverage-histogram"></iobio-histogram>
           </iobio-panel>
 
           <iobio-panel>
@@ -434,6 +434,23 @@
 
         return request;
       }
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const chart = document.querySelector('#read-coverage-histogram');
+
+        // Set the custom formatters for the histogram
+        if (chart) {
+          chart.tooltipFormatter = (d) => `${d[0]}, ${precisionRound(d[1] * 100, 2)}%`;
+          chart.xAxisTickFormatter = (d) => `${d}X`;
+          chart.yAxisTickFormatter = (d) => `${d * 100}%`;
+        }
+        
+        function precisionRound(number, precision) {
+          const factor = Math.pow(10, precision);
+          return Math.round(number * factor) / factor;
+        }
+
+      });
 
       document.addEventListener('selected-regions-change', (event) => {
         broker.regions = event.detail;
